알파베타 불필요한 코드 삭제

--- a/copy.ipynb
+++ b/copy.ipynb
@@ -70,7 +70,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 45,
       "metadata": {
         "id": "eRE4STQLpNIa"
       },
@@ -81,12 +81,9 @@
         "    strategies: {참가자 이름: 함수} 형태의 딕셔너리. \n",
         "    여기서 함수(game, state)는 상태 state에서 참가자의 수(move)를 찾는 함수\"\"\"\n",
         "    #state = game.initial\n",
-        "    for a in game.board:\n",
-        "        print(a)\n",
         "    while not game.is_terminal():\n",
         "        player = game.to_move\n",
         "        move = strategies[game.to_move](game, game.board)\n",
-        "        print(game.actions())\n",
         "        if move:\n",
         "            game = game.result(move)\n",
         "        else:\n",
@@ -94,7 +91,7 @@
         "        if verbose: \n",
         "            print('Player', player, 'move:', move)\n",
         "            game.display()\n",
-        "    return game.board"
+        "    return game"
       ]
     },
     {
@@ -163,7 +160,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 70,
       "metadata": {
         "id": "TDVwtFvxpNId"
       },
@@ -174,7 +171,7 @@
         "\n",
         "    player = game1.to_move\n",
         "\n",
-        "    def max_value(game, alpha, beta, p = False):\n",
+        "    def max_value(game, alpha, beta):\n",
         "        if game.is_terminal():\n",
         "            return game.utility(), None\n",
         "        v, move = -infinity, None\n",
@@ -187,13 +184,11 @@
         "                # print('가지치기')\n",
         "                return v, move\n",
         "        if not move:\n",
-        "            if p == True:\n",
-        "                return game.utility(), None\n",
         "            game.to_move = '○'\n",
-        "            return min_value(game, alpha, beta, True)\n",
+        "            return min_value(game, alpha, beta)\n",
         "        return v, move\n",
         "\n",
-        "    def min_value(game, alpha, beta, p = False):\n",
+        "    def min_value(game, alpha, beta):\n",
         "        if game.is_terminal():\n",
         "            return game.utility(), None\n",
         "        v, move = +infinity, None\n",
@@ -205,10 +200,8 @@
         "            if v <= alpha:\n",
         "                return v, move\n",
         "        if not move:\n",
-        "            if p == True:\n",
-        "                return game.utility(), None\n",
         "            game.to_move =  '●'\n",
-        "            return max_value(game, alpha, beta, True)   \n",
+        "            return max_value(game, alpha, beta)   \n",
         "        return v, move\n",
         "    \n",
         "    if(game1.to_move=='○'):\n",
@@ -228,7 +221,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 68,
       "metadata": {
         "id": "8feQm3QbpNIf"
       },
@@ -258,15 +251,15 @@
         "              [[game.height-1,0],[[game.height-2,0],[game.height-2,1],[game.height-1,0]]],\n",
         "              [[game.height-1,game.width-1],[[game.height-2,game.width-1],[game.height-2,game.width-2],[game.height-1,game.width-2]]]]\n",
         "    for corner in corners:\n",
-        "        if(game.board[corner[0][0]][corner[0][1]]=='●'): cnt+=2\n",
-        "        elif(game.board[corner[0][0]][corner[0][1]]=='○'):cnt-=2\n",
+        "        if(game.board[corner[0][0]][corner[0][1]]=='●'): cnt+=3\n",
+        "        elif(game.board[corner[0][0]][corner[0][1]]=='○'):cnt-=3\n",
         "        else: \n",
         "            for xy in corner[1]:\n",
-        "                if(game.board[xy[0]][xy[1]]=='●'): cnt-=1\n",
-        "                elif(game.board[xy[0]][xy[1]]=='○'):cnt+=1\n",
+        "                if(game.board[xy[0]][xy[1]]=='●'): cnt-=2\n",
+        "                elif(game.board[xy[0]][xy[1]]=='○'):cnt+=2\n",
         "    return cnt\n",
         "\n",
-        "def h_alphabeta_search(game, cutoff=cutoff_depth(6)):\n",
+        "def h_alphabeta_search(game, cutoff=cutoff_depth(4)):\n",
         "    \"\"\"휴리스틱 알파-베타 탐색\"\"\"\n",
         "\n",
         "    player = game.to_move\n",
@@ -313,7 +306,11 @@
         "        # print(game.actions(), move)\n",
         "        return v, move\n",
         "\n",
-        "    return max_value(game, -infinity, +infinity, 0)"
+        "\n",
+        "    if(game.to_move=='○'):\n",
+        "        return min_value(game, -infinity, +infinity, 0)\n",
+        "    else :\n",
+        "        return max_value(game, -infinity, +infinity, 0)\n"
       ]
     },
     {
@@ -479,7 +476,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 58,
       "metadata": {
         "id": "hPjq5_YApNIi"
       },
@@ -487,7 +484,10 @@
       "source": [
         "def random_player(game, state):\n",
         "    \"\"\"허용되는 수(move) 중에서 무작위로 하나를 선택하는 플레이어\"\"\"\n",
-        "    return random.choice(list(game.actions(state)))\n",
+        "    act = game.actions()\n",
+        "    if not act:\n",
+        "        return None\n",
+        "    return random.choice(game.actions())\n",
         "\n",
         "def player(search_algorithm):\n",
         "    \"\"\"지정된 탐색 알고리즘을 사용하는 플레이어: (game, state)를 입력 받아 move를 리턴하는 함수.\"\"\"\n",
@@ -548,14 +548,100 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 71,
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "A7GlNIDbpNIj",
+        "outputId": "e4207518-ae03-47b9-f992-a0db901cd763",
         "scrolled": true
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Player ● move: [0, 2]\n",
+            " .  . ●  . \n",
+            " . ● ●  . \n",
+            " . ○ ●  . \n",
+            " .  .  .  . \n",
+            "Player ○ move: [0, 3]\n",
+            " .  . ● ○ \n",
+            " . ● ○  . \n",
+            " . ○ ●  . \n",
+            " .  .  .  . \n",
+            "Player ● move: [1, 3]\n",
+            " .  . ● ○ \n",
+            " . ● ● ● \n",
+            " . ○ ●  . \n",
+            " .  .  .  . \n",
+            "Player ○ move: [2, 3]\n",
+            " .  . ● ○ \n",
+            " . ● ● ○ \n",
+            " . ○ ○ ○ \n",
+            " .  .  .  . \n",
+            "Player ● move: [3, 0]\n",
+            " .  . ● ○ \n",
+            " . ● ● ○ \n",
+            " . ● ○ ○ \n",
+            "●  .  .  . \n",
+            "Player ○ move: [1, 0]\n",
+            " .  . ● ○ \n",
+            "○ ○ ○ ○ \n",
+            " . ● ○ ○ \n",
+            "●  .  .  . \n",
+            "Player ● move: [2, 0]\n",
+            " .  . ● ○ \n",
+            "○ ● ○ ○ \n",
+            "● ● ○ ○ \n",
+            "●  .  .  . \n",
+            "Player ○ move: [3, 2]\n",
+            " .  . ● ○ \n",
+            "○ ● ○ ○ \n",
+            "● ○ ○ ○ \n",
+            "●  . ○  . \n",
+            "Player ● move: [3, 1]\n",
+            " .  . ● ○ \n",
+            "○ ● ○ ○ \n",
+            "● ● ○ ○ \n",
+            "● ● ○  . \n",
+            "Player ○ move: [0, 0]\n",
+            "○  . ● ○ \n",
+            "○ ○ ○ ○ \n",
+            "● ● ○ ○ \n",
+            "● ● ○  . \n",
+            "Player ● move: [0, 1]\n",
+            "○ ● ● ○ \n",
+            "○ ● ○ ○ \n",
+            "● ● ○ ○ \n",
+            "● ● ○  . \n",
+            "Player ○ move: None\n",
+            "○ ● ● ○ \n",
+            "○ ● ○ ○ \n",
+            "● ● ○ ○ \n",
+            "● ● ○  . \n",
+            "Player ● move: [3, 3]\n",
+            "○ ● ● ○ \n",
+            "○ ● ○ ○ \n",
+            "● ● ● ○ \n",
+            "● ● ● ● \n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<__main__.Othello at 0x7f4a4d625220>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 71
+        }
+      ],
       "source": [
-        "play_game(Othello(4, 4, '●'), {'●':player(alphabeta_search), '○':player(alphabeta_search)}, verbose=True)"
+        "play_game(Othello(4, 4, '●'), {'●':player(alphabeta_search), '○':random_player}, verbose=True)"
       ]
     },
     {
@@ -569,13 +655,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 38,
       "metadata": {
         "id": "ijfeQBtHpNIj",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "aea791e8-2a3a-4448-b52d-10b33e8c94ac"
+        "outputId": "0af337ad-aec3-42b8-cdc7-3882ed2d01a2"
       },
       "outputs": [
         {
@@ -602,130 +688,137 @@
             " .  .  .  .  . \n",
             " .  .  .  .  . \n",
             "[[3, 0], [3, 1], [3, 2], [3, 3], [3, 4]]\n",
-            "Player ● move: [3, 3]\n",
+            "Player ● move: [3, 2]\n",
             " .  . ●  .  . \n",
             " . ● ●  .  . \n",
             " . ○ ● ○  . \n",
-            " .  .  . ●  . \n",
+            " .  . ●  .  . \n",
             " .  .  .  .  . \n",
-            "[[0, 1], [0, 3], [4, 3]]\n",
+            "[[0, 1], [0, 3], [4, 1], [4, 3]]\n",
+            "Player ○ move: [4, 1]\n",
+            " .  . ●  .  . \n",
+            " . ● ●  .  . \n",
+            " . ○ ● ○  . \n",
+            " .  . ○  .  . \n",
+            " . ○  .  .  . \n",
+            "[[2, 0], [2, 4], [3, 0], [3, 1], [3, 4], [4, 2]]\n",
+            "Player ● move: [2, 0]\n",
+            " .  . ●  .  . \n",
+            " . ● ●  .  . \n",
+            "● ● ● ○  . \n",
+            " .  . ○  .  . \n",
+            " . ○  .  .  . \n",
+            "[[0, 1], [1, 0]]\n",
             "Player ○ move: [0, 1]\n",
             " . ○ ●  .  . \n",
-            " . ○ ○  .  . \n",
-            " . ○ ● ○  . \n",
-            " .  .  . ●  . \n",
-            " .  .  .  .  . \n",
-            "[[0, 0], [1, 3], [2, 0], [2, 4]]\n",
+            " . ● ○  .  . \n",
+            "● ● ● ○  . \n",
+            " .  . ○  .  . \n",
+            " . ○  .  .  . \n",
+            "[[0, 0], [0, 3], [1, 3], [2, 4], [4, 2], [4, 3]]\n",
             "Player ● move: [0, 0]\n",
             "● ● ●  .  . \n",
             " . ● ○  .  . \n",
-            " . ○ ● ○  . \n",
-            " .  .  . ●  . \n",
-            " .  .  .  .  . \n",
-            "[[1, 0], [3, 2], [4, 3]]\n",
+            "● ● ● ○  . \n",
+            " .  . ○  .  . \n",
+            " . ○  .  .  . \n",
+            "[[1, 0], [3, 0]]\n",
             "Player ○ move: [1, 0]\n",
             "● ● ●  .  . \n",
             "○ ○ ○  .  . \n",
-            " . ○ ● ○  . \n",
-            " .  .  . ●  . \n",
-            " .  .  .  .  . \n",
-            "[[1, 3], [2, 0], [2, 4], [3, 1], [3, 4]]\n",
-            "Player ● move: [2, 0]\n",
-            "● ● ●  .  . \n",
-            "● ● ○  .  . \n",
-            "● ● ● ○  . \n",
-            " .  .  . ●  . \n",
-            " .  .  .  .  . \n",
-            "[[3, 0], [3, 2], [4, 3]]\n",
-            "Player ○ move: [3, 0]\n",
-            "● ● ●  .  . \n",
-            "● ● ○  .  . \n",
             "● ○ ● ○  . \n",
-            "○  .  . ●  . \n",
-            " .  .  .  .  . \n",
-            "[[1, 3], [2, 4], [3, 1], [3, 2], [3, 4], [4, 0]]\n",
-            "Player ● move: [4, 0]\n",
-            "● ● ●  .  . \n",
-            "● ● ○  .  . \n",
-            "● ○ ● ○  . \n",
-            "●  .  . ●  . \n",
-            "●  .  .  .  . \n",
-            "[[3, 2], [4, 3]]\n",
-            "Player ○ move: [3, 2]\n",
-            "● ● ●  .  . \n",
-            "● ● ○  .  . \n",
-            "● ○ ○ ○  . \n",
-            "●  . ○ ●  . \n",
-            "●  .  .  .  . \n",
-            "[[0, 3], [1, 3], [2, 4], [3, 1], [3, 4], [4, 2], [4, 3]]\n",
-            "Player ● move: [4, 2]\n",
-            "● ● ●  .  . \n",
-            "● ● ●  .  . \n",
-            "● ○ ● ○  . \n",
-            "●  . ● ●  . \n",
-            "●  . ●  .  . \n",
-            "[[0, 3], [4, 1], [4, 3]]\n",
-            "Player ○ move: [4, 3]\n",
-            "● ● ●  .  . \n",
-            "● ● ●  .  . \n",
-            "● ○ ● ○  . \n",
-            "●  . ○ ○  . \n",
-            "●  . ● ○  . \n",
-            "[[2, 4], [3, 1], [3, 4], [4, 4]]\n",
-            "Player ● move: [4, 4]\n",
-            "● ● ●  .  . \n",
-            "● ● ●  .  . \n",
-            "● ○ ● ○  . \n",
-            "●  . ○ ●  . \n",
-            "●  . ● ● ● \n",
-            "[[0, 3], [3, 4]]\n",
-            "Player ○ move: [3, 4]\n",
-            "● ● ●  .  . \n",
-            "● ● ●  .  . \n",
-            "● ○ ● ○  . \n",
-            "●  . ○ ○ ○ \n",
-            "●  . ● ● ● \n",
-            "[[1, 3], [2, 4], [3, 1]]\n",
-            "Player ● move: [3, 1]\n",
-            "● ● ●  .  . \n",
-            "● ● ●  .  . \n",
-            "● ● ● ○  . \n",
-            "● ● ○ ○ ○ \n",
-            "●  . ● ● ● \n",
-            "[[1, 3], [2, 4]]\n",
-            "Player ○ move: [1, 3]\n",
-            "● ● ●  .  . \n",
-            "● ● ● ●  . \n",
-            "● ● ● ●  . \n",
-            "● ● ○ ● ○ \n",
-            "●  . ● ● ● \n",
-            "[[1, 4]]\n",
-            "Player ○ move: [1, 4]\n",
-            "● ● ●  .  . \n",
-            "● ● ● ● ○ \n",
-            "● ● ● ○  . \n",
-            "● ● ○ ● ○ \n",
-            "●  . ● ● ● \n",
-            "[[2, 4]]\n",
+            " .  . ○  .  . \n",
+            " . ○  .  .  . \n",
+            "[[2, 4], [3, 1], [3, 4], [4, 2]]\n",
             "Player ● move: [2, 4]\n",
             "● ● ●  .  . \n",
-            "● ● ● ● ○ \n",
-            "● ● ● ● ● \n",
-            "● ● ○ ● ● \n",
-            "●  . ● ● ● \n",
-            "[[0, 4], [4, 1]]\n",
-            "Player ○ move: [0, 4]\n",
+            "○ ○ ○  .  . \n",
+            "● ○ ● ● ● \n",
+            " .  . ○  .  . \n",
+            " . ○  .  .  . \n",
+            "[[1, 4], [3, 0], [3, 3], [3, 4]]\n",
+            "Player ○ move: [1, 4]\n",
+            "● ● ●  .  . \n",
+            "○ ○ ○  . ○ \n",
+            "● ○ ● ○ ● \n",
+            " .  . ○  .  . \n",
+            " . ○  .  .  . \n",
+            "[[0, 4], [3, 1], [3, 4], [4, 2]]\n",
+            "Player ● move: [0, 4]\n",
             "● ● ●  . ● \n",
-            "● ● ● ● ● \n",
-            "● ● ● ● ● \n",
-            "● ● ○ ● ● \n",
-            "●  . ● ● ● \n",
-            "[[4, 1]]\n",
-            "Player ○ move: [4, 1]\n",
+            "○ ○ ○  . ● \n",
+            "● ○ ● ○ ● \n",
+            " .  . ○  .  . \n",
+            " . ○  .  .  . \n",
+            "[[3, 0], [3, 3]]\n",
+            "Player ○ move: [3, 3]\n",
             "● ● ●  . ● \n",
+            "○ ○ ○  . ● \n",
+            "● ○ ○ ○ ● \n",
+            " .  . ○ ○  . \n",
+            " . ○  .  .  . \n",
+            "[[3, 1], [3, 4], [4, 2], [4, 4]]\n",
+            "Player ● move: [4, 4]\n",
+            "● ● ●  . ● \n",
+            "○ ● ○  . ● \n",
+            "● ○ ● ○ ● \n",
+            " .  . ○ ●  . \n",
+            " . ○  .  . ● \n",
+            "[[3, 0], [3, 4], [4, 3]]\n",
+            "Player ○ move: [3, 4]\n",
+            "● ● ●  . ● \n",
+            "○ ● ○  . ● \n",
+            "● ○ ● ○ ● \n",
+            " .  . ○ ○ ○ \n",
+            " . ○  .  . ● \n",
+            "[[1, 3], [3, 1], [4, 2]]\n",
+            "Player ● move: [1, 3]\n",
+            "● ● ●  . ● \n",
+            "○ ● ● ● ● \n",
+            "● ○ ● ○ ● \n",
+            " .  . ○ ○ ○ \n",
+            " . ○  .  . ● \n",
+            "[[0, 3], [3, 0]]\n",
+            "Player ○ move: [0, 3]\n",
+            "● ● ● ○ ● \n",
+            "○ ● ○ ○ ● \n",
+            "● ○ ● ○ ● \n",
+            " .  . ○ ○ ○ \n",
+            " . ○  .  . ● \n",
+            "[[3, 1], [4, 2]]\n",
+            "Player ● move: [4, 2]\n",
+            "● ● ● ○ ● \n",
+            "○ ● ○ ○ ● \n",
+            "● ○ ● ○ ● \n",
+            " .  . ● ● ○ \n",
+            " . ○ ●  . ● \n",
+            "[[3, 0], [3, 1], [4, 3]]\n",
+            "Player ○ move: [4, 3]\n",
+            "● ● ● ○ ● \n",
+            "○ ● ○ ○ ● \n",
+            "● ○ ● ○ ● \n",
+            " .  . ○ ○ ○ \n",
+            " . ○ ○ ○ ● \n",
+            "[[3, 1], [4, 0]]\n",
+            "Player ● move: [4, 0]\n",
+            "● ● ● ○ ● \n",
+            "○ ● ○ ○ ● \n",
+            "● ○ ● ○ ● \n",
+            " .  . ○ ○ ○ \n",
             "● ● ● ● ● \n",
+            "[[3, 0], [3, 1]]\n",
+            "Player ○ move: [3, 1]\n",
+            "● ● ● ○ ● \n",
+            "○ ● ○ ○ ● \n",
+            "● ○ ○ ○ ● \n",
+            " . ○ ○ ○ ○ \n",
             "● ● ● ● ● \n",
-            "● ● ● ● ● \n",
+            "[[3, 0]]\n",
+            "Player ● move: [3, 0]\n",
+            "● ● ● ○ ● \n",
+            "○ ● ○ ○ ● \n",
+            "○ ○ ○ ○ ● \n",
+            "○ ○ ○ ○ ○ \n",
             "● ● ● ● ● \n"
           ]
         },
@@ -733,15 +826,15 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[['●', '●', '●', '.', '●'],\n",
-              " ['●', '●', '●', '●', '●'],\n",
-              " ['●', '●', '●', '●', '●'],\n",
-              " ['●', '●', '●', '●', '●'],\n",
+              "[['●', '●', '●', '○', '●'],\n",
+              " ['○', '●', '○', '○', '●'],\n",
+              " ['○', '○', '○', '○', '●'],\n",
+              " ['○', '○', '○', '○', '○'],\n",
               " ['●', '●', '●', '●', '●']]"
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 38
         }
       ],
       "source": [
@@ -750,13 +843,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 69,
       "metadata": {
-        "id": "4TEzqUSPpNIj"
+        "id": "4TEzqUSPpNIj",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f20f66fe-fbc0-4b5d-8a3e-d103b6992fe3"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-35\n",
+            "-25\n",
+            "-36\n",
+            "-28\n",
+            "-33\n",
+            "-36\n",
+            "-34\n",
+            "-36\n",
+            "-18\n",
+            "-36\n"
+          ]
+        }
+      ],
       "source": [
-        "play_game(TicTacToe(), {'X':player(h_alphabeta_search), 'O':random_player}, verbose=True).utility"
+        "a = 0\n",
+        "for i in range(10):\n",
+        "  a = play_game(Othello(6, 6, '●'), {'●':random_player, '○':player(h_alphabeta_search)}, verbose=False).utility()\n",
+        "  print(a)"
       ]
     },
     {
@@ -767,8 +884,7 @@
       },
       "outputs": [],
       "source": [
-        "%%time\n",
-        "play_game(TicTacToe(), {'X':player(minimax_search), 'O':player(h_alphabeta_search)})"
+        "play_game(Othello(6, 6, '●'), {'●':random_player, '○':player(h_alphabeta_search)}, verbose=False).utility()"
       ]
     },
     {
@@ -802,7 +918,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 648
+          "height": 686
         },
         "id": "MwDf0PuqpNIk",
         "outputId": "f943b34b-2f55-4226-d74e-46d9783dea6a",
