--- a/final.ipynb
+++ b/final.ipynb
@@ -11,13 +11,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "id": "5DvDelF-pNIX"
    },
    "outputs": [],
    "source": [
-    "from collections import defaultdict\n",
     "import random\n",
     "import math\n",
     "infinity = math.inf"
@@ -35,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "id": "TxFcgN4RpNIZ"
    },
@@ -68,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {
     "id": "eRE4STQLpNIa"
    },
@@ -102,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {
     "id": "TDVwtFvxpNId"
    },
@@ -141,7 +140,7 @@
     "            if v <= alpha:\n",
     "                return v, move\n",
     "        if not move:\n",
-    "            game.to_move =  '●'\n",
+    "            game.to_move = '●'\n",
     "            return max_value(game, alpha, beta)   \n",
     "        return v, move\n",
     "    \n",
@@ -155,12 +154,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 휴리스틱 알파-베타 탐색에서 필요한 함수 정의"
+    "### 휴리스틱 알파-베타 탐색에서 필요한 함수"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,6 +173,7 @@
     "    판의 모든 모서리 => +\n",
     "    판의 각 꼭짓점을 둘러싼 세 점 => +\n",
     "    판의 각 꼭짓점이 채워지지 않은 상태에서 각 꼭짓점을 둘러싼 세 점 => - \"\"\"\n",
+    "    \n",
     "    cnt = 0\n",
     "    for i in range(game.height):\n",
     "        for j in range(game.width):\n",
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {
     "id": "8feQm3QbpNIf"
    },
@@ -261,7 +261,6 @@
     "            return max_value(game, alpha, beta, depth)   \n",
     "        return v, move\n",
     "\n",
-    "\n",
     "    if(game.to_move=='○'):\n",
     "        return min_value(game, -infinity, +infinity, 0)\n",
     "    else :\n",
@@ -288,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": null,
    "metadata": {
     "id": "6UBgKpWilx3s"
    },
@@ -396,13 +395,15 @@
     "            return 1\n",
     "        return 0\n",
     "\n",
-    "    def display(self): \n",
+    "    def display(self, util = False): \n",
     "        \"\"\"현재 배열 출력 함수\"\"\"\n",
     "        for i in range(self.height):\n",
     "            for j in range(self.width):\n",
     "                if(self.board[i][j]=='.'): print('',end=\" \")\n",
     "                print(self.board[i][j], end=\" \")\n",
-    "            print()"
+    "            print()\n",
+    "        if util:\n",
+    "            print(self.utility())"
    ]
   },
   {
@@ -416,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {
     "id": "hPjq5_YApNIi"
    },
@@ -436,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {
     "id": "QUSAYPghpNIi"
    },
@@ -444,20 +445,40 @@
    "source": [
     "def query_player(game, state):\n",
     "    \"\"\"다음 수(move)를 직접 입력하는 형태의 플레이어\"\"\"\n",
+    "    cheerup = [\"좋습니다.\", \"허를 찌르는 수입니다.\", \"훌륭하군요!\", \"한 수 배워갑니다.\", \"예상치 못한 수...(사실 그런거 없음)\", \"대단합니다!\"]\n",
     "    print(\"현재 상태:\")\n",
     "    game.display()\n",
-    "    print(f\"가능한 수: {game.actions()}\")\n",
     "    print(\"\")\n",
     "    move = None\n",
-    "    if game.actions():\n",
-    "        move_string = input('당신의 수는? (돌을 둘 위치 입력; 예: (1,1)): ')\n",
+    "    actions = game.actions()\n",
+    "    if actions:\n",
+    "        while True:\n",
+    "            print(f\"가능한 수: {actions}\")\n",
+    "            move_string = input('당신의 수는? (돌을 둘 위치 입력; 예: (1,1)(세로, 가로)): ')\n",
+    "            col, row = int(move_string.split(',')[0]), int(move_string.split(',')[1])\n",
+    "            if [col, row] in actions:\n",
+    "                print()\n",
+    "                print(random.choice(cheerup))\n",
+    "                print()\n",
+    "                break\n",
+    "                \n",
+    "            print()\n",
+    "            print(\"===============================\")\n",
+    "            print(\"가능한 수만 둘 수 있습니다! 다시 두세요\")\n",
+    "            print(\"===============================\")\n",
+    "            print()\n",
+    "            print(\"현재 상태:\")\n",
+    "            game.display()\n",
+    "            continue\n",
     "        try:\n",
     "            move = eval(move_string)\n",
     "            \n",
     "        except NameError:\n",
     "            move = move_string\n",
     "    else:\n",
+    "        print(\"=================================\")\n",
     "        print('가능한 수가 없음: 상대방에게 순서가 넘어감.')\n",
+    "        print(\"=================================\")\n",
     "    return move"
    ]
   },
@@ -467,46 +488,122 @@
     "id": "pA3UQgjvpNIi"
    },
    "source": [
-    "## 게임하기"
+    "# 게임하기"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "가능한 탐색 : player(alphabeta_search), player(h_alphabeta_search, cutoff_depth), random_player, query_player"
+    "#### 가능한 탐색 : \n",
+    "\n",
+    "##### 1. player(  alphabeta_search  )  => 알파-베타 가지치기 탐색\n",
+    "\n",
+    "##### 2. player(  h_alphabeta_search ,   cutoff_depth  )  => 휴리스틱 알파-베타 탐색 ( 매개변수로 원하는 cutoff 깊이 입력 )\n",
+    "\n",
+    "##### 3. random_player  => 랜덤 탐색(무작위 보행)\n",
+    "\n",
+    "##### 4. query_player  => 사용자 플레이\n",
+    "<hr>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 플레이 방법: \n",
+    "\n",
+    "\n",
+    "```python\n",
+    "양식: play_game(Othello(보드판의 높이, 보드판의 너비, '●'), {'●':선수자 탐색, '○':후수자 탐색}, verbose=참 or 거짓) \n",
+    "```\n",
+    "\n",
+    "        위 양식에 변수를 입력\n",
+    "\n",
+    "        보드판의 높이: 게임을 할 보드판의 높이\n",
+    "        보드판의 너비: 게임을 할 보드판의 너비\n",
+    "        선수자 탐색 : 가능한 탐색 4가지중 한가지 선택\n",
+    "        후수자 탐색 : 가능한 탐색 4가지중 한가지 선택\n",
+    "        참 or 거짓 : True입력시 진행 상황마다 보드판 출력, False입력시 출력x\n",
+    "\n",
+    "#### ※주의사항※\n",
+    "\n",
+    "        보드의 판을 5x5이상으로 설정 할 경우, alphabeta_search가 매우 느려져서 결과 확인에 큰 무리가 있음\n",
+    "        보드의 판을 4x4로 설정 할 경우, 후수자가 모서리를 확보하는 경우의 수가 많아지기 때문에 후수자의 승률이 매우 올라감\n",
+    "        보드의 판을 5x5로 설정 할 경우, h_alphabeta_search의 cutoff 깊이는 6~8이 적당함 ( 그 이상은 실행 속도가 매우 느려짐 )\n",
+    "        보드의 판을 6x6으로 설정 할 경우, h_alphabeta_search의 cutoff 깊이는 4~6이 적당함 ( 그 이상은 실행 속도가 매우 느려짐 )\n",
+    "        \n",
+    "<hr>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. 게임 결과만 확인하기\n",
+    "\n",
+    "###### 기본 세팅 :  양식에 원하는 변수 입력\n",
+    "    \n",
+    "    방법1: 양식에 .utility()를 붙여서 실행 => 게임 결과 값만 출력\n",
+    "          출력된 값 => 양수이면 선수자 승리, 음수이면 후수자 승리, 0이면 무승부\n",
+    "          (결과의 절댓값이 클수록 월등히 이긴것임)\n",
+    "          \n",
+    "    방법2: 양식에 .display()를 붙여서 실행 => 게임 결과 보드판만 출력\n",
+    "    \n",
+    "    방법3: 양식에 .display(True)를 붙여서 실행 => 게임 결과 보드판과 값 출력\n",
+    "<hr>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 게임 결과만 확인하기; 방법1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "play_game(Othello(4, 4, '●'), {'●':player(h_alphabeta_search, 6), '○':player(alphabeta_search)}, verbose=False).utility()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 게임 결과만 확인하기; 방법2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
     "id": "A7GlNIDbpNIj",
-    "outputId": "e4207518-ae03-47b9-f992-a0db901cd763",
-    "scrolled": true
+    "outputId": "e4207518-ae03-47b9-f992-a0db901cd763"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "○ ○ ● ● \n",
-      ".  ● ● ● \n",
-      "● ● ● ● \n",
-      ".  ● .  ● \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "play_game(Othello(4, 4, '●'), {'●':player(alphabeta_search), '○':random_player}, verbose=False).display()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 게임 결과만 확인하기; 방법3"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -514,91 +611,32 @@
     "id": "ijfeQBtHpNIj",
     "outputId": "0af337ad-aec3-42b8-cdc7-3882ed2d01a2"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Player ● move: [0, 2]\n",
-      ".  .  ● .  \n",
-      ".  ● ● .  \n",
-      ".  ○ ● .  \n",
-      ".  .  .  .  \n",
-      "Player ○ move: [0, 3]\n",
-      ".  .  ● ○ \n",
-      ".  ● ○ .  \n",
-      ".  ○ ● .  \n",
-      ".  .  .  .  \n",
-      "Player ● move: [1, 3]\n",
-      ".  .  ● ○ \n",
-      ".  ● ● ● \n",
-      ".  ○ ● .  \n",
-      ".  .  .  .  \n",
-      "Player ○ move: [0, 1]\n",
-      ".  ○ ○ ○ \n",
-      ".  ○ ● ● \n",
-      ".  ○ ● .  \n",
-      ".  .  .  .  \n",
-      "Player ● move: [3, 0]\n",
-      ".  ○ ○ ○ \n",
-      ".  ○ ● ● \n",
-      ".  ● ● .  \n",
-      "● .  .  .  \n",
-      "Player ○ move: [2, 3]\n",
-      ".  ○ ○ ○ \n",
-      ".  ○ ○ ○ \n",
-      ".  ● ● ○ \n",
-      "● .  .  .  \n",
-      "Player ● move: [0, 0]\n",
-      "● ○ ○ ○ \n",
-      ".  ● ○ ○ \n",
-      ".  ● ● ○ \n",
-      "● .  .  .  \n",
-      "Player ○ move: [3, 1]\n",
-      "● ○ ○ ○ \n",
-      ".  ○ ○ ○ \n",
-      ".  ○ ○ ○ \n",
-      "● ○ .  .  \n",
-      "Player ● move: [3, 2]\n",
-      "● ○ ○ ○ \n",
-      ".  ○ ○ ○ \n",
-      ".  ○ ○ ○ \n",
-      "● ● ● .  \n",
-      "Player ○ move: [3, 3]\n",
-      "● ○ ○ ○ \n",
-      ".  ● ○ ○ \n",
-      ".  ○ ● ○ \n",
-      "● ● ● ● \n",
-      "Player ○ move: [1, 0]\n",
-      "● ○ ○ ○ \n",
-      "○ ○ ○ ○ \n",
-      ".  ○ ● ○ \n",
-      "● ● ● ● \n",
-      "Player ● move: [2, 0]\n",
-      "● ○ ○ ○ \n",
-      "● ○ ○ ○ \n",
-      "● ● ● ○ \n",
-      "● ● ● ● \n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<__main__.Othello at 0x115478ee0>"
-      ]
-     },
-     "execution_count": 107,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "play_game(Othello(4, 4, '●'), {'●':player(h_alphabeta_search, 20), '○':player(h_alphabeta_search, 1)}, verbose=True)"
+    "play_game(Othello(4, 4, '●'), {'●':player(h_alphabeta_search, 4), '○':player(h_alphabeta_search, 6)}, verbose=False).display(True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<hr>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. n번 실행 후 통계 확인하기\n",
+    "\n",
+    "###### 기본세팅 :  반복문의 첫 문장( 10행 ) 에 위치한 양식에 원하는 변수 입력  ( 양식 끝에 있는 utility()함수는 지우지 말것! )\n",
+    "    \n",
+    "    원하는 반복 횟수를 입력하면 사용자가 실행시킨 탐색 방법으로 진행한 게임의 통계 확인 가능"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -607,145 +645,82 @@
     "outputId": "f20f66fe-fbc0-4b5d-8a3e-d103b6992fe3",
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "선수자 승률: 0%\n",
-      "후수자 승률: 100%\n",
-      "무승부 횟수: 0회\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "draw = 0\n",
     "win = 0\n",
     "lose = 0\n",
-    "for i in range(10):\n",
-    "  ex = play_game(Othello(4, 4, '●'), {'●':player(h_alphabeta_search, 4), '○':player(h_alphabeta_search, 4)}, verbose=False).utility()\n",
+    "n = int(input(\"몇 회 실행하시겠습니까?\"))\n",
+    "print(\"시작\", end = '')\n",
+    "print(\" \"*(n-4), end = '')\n",
+    "print(\"종료\")\n",
+    "\n",
+    "for i in range(n):\n",
+    "  ex = play_game(Othello(10, 10, '●'), {'●':random_player, '○':player(h_alphabeta_search, 1)}, verbose=False).utility()\n",
     "  if ex > 0:\n",
     "    win += 1\n",
     "  elif ex < 0:\n",
     "    lose += 1\n",
     "  else:\n",
     "    draw += 1\n",
+    "  \n",
+    "  if i == n-1:\n",
+    "    print(\"진행 완료!\")\n",
+    "    print()\n",
+    "  else:\n",
+    "    print(\"#\", end = '')\n",
     "\n",
-    "print(f\"선수자 승률: {win*10}%\")\n",
-    "print(f\"후수자 승률: {lose*10}%\")\n",
-    "print(f\"무승부 횟수: {draw}회\")        "
+    "print(f\"{n}회 실행시 통계\")\n",
+    "print(\"======================\")\n",
+    "print(f\"선수자 승률: {round(win/n*100, 2)}%\")\n",
+    "print(f\"후수자 승률: {round(lose/n*100, 2)}%\")\n",
+    "print(f\"무승부 횟수: {draw}회\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {
-    "id": "EjO7oUw1pNIk"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-31"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "play_game(Othello(6, 6, '●'), {'●':random_player, '○':player(h_alphabeta_search, 4)}, verbose=False).utility()"
+    "<hr>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. 사용자 플레이하기\n",
+    "\n",
+    "###### 기본세팅 :  첫 행에 위치한 양식에 원하는 변수 입력  ( 양식 끝에 있는 utility()함수는 지우지 말것! )\n",
+    "\n",
+    "        탐색 방법을 넣는 변수중 한개에 query_player를 입력\n",
+    "        다른 한개에는 대결하기 원하는 탐색 방법 입력 후 실행\n",
+    "        \n",
+    "        게임 종료시 어떤 플레이어가 이겼는지 반환"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
      "height": 686
     },
     "id": "MwDf0PuqpNIk",
-    "outputId": "f943b34b-2f55-4226-d74e-46d9783dea6a",
-    "scrolled": false
+    "outputId": "f943b34b-2f55-4226-d74e-46d9783dea6a"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "현재 상태:\n",
-      " .  .  .  . \n",
-      " . ● ○  . \n",
-      " . ○ ●  . \n",
-      " .  .  .  . \n",
-      "가능한 수: [[0, 2], [1, 3], [2, 0], [3, 1]]\n",
-      "\n",
-      "당신의 수는? (돌을 둘 위치 입력; 예: (1,1)): 3,1\n",
-      "현재 상태:\n",
-      " .  .  .  . \n",
-      " . ● ○  . \n",
-      " . ○ ●  . \n",
-      "○ ●  .  . \n",
-      "가능한 수: [[0, 2], [1, 3], [2, 0]]\n",
-      "\n",
-      "당신의 수는? (돌을 둘 위치 입력; 예: (1,1)): 0,2\n",
-      "현재 상태:\n",
-      " .  . ● ○ \n",
-      " . ● ○  . \n",
-      " . ○ ●  . \n",
-      "○ ●  .  . \n",
-      "가능한 수: [[1, 3], [2, 0]]\n",
-      "\n",
-      "당신의 수는? (돌을 둘 위치 입력; 예: (1,1)): 1,2\n",
-      "현재 상태:\n",
-      " .  . ● ○ \n",
-      " . ● ●  . \n",
-      " . ○ ●  . \n",
-      "○ ○ ○  . \n",
-      "가능한 수: [[2, 0]]\n",
-      "\n",
-      "당신의 수는? (돌을 둘 위치 입력; 예: (1,1)): 2,0\n",
-      "현재 상태:\n",
-      " .  . ● ○ \n",
-      "○ ● ●  . \n",
-      "○ ○ ●  . \n",
-      "○ ○ ○  . \n",
-      "가능한 수: []\n",
-      "\n",
-      "가능한 수가 없음: 상대방에게 순서가 넘어감.\n",
-      "현재 상태:\n",
-      " .  . ● ○ \n",
-      "○ ○ ○ ○ \n",
-      "○ ○ ○  . \n",
-      "○ ○ ○  . \n",
-      "가능한 수: []\n",
-      "\n",
-      "가능한 수가 없음: 상대방에게 순서가 넘어감.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<__main__.Othello at 0x111b66200>"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "play_game(Othello(4, 4, '●'), {'●':query_player, '○':player(alphabeta_search)}, verbose = False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "score = play_game(Othello(4, 4, '●'), {'●':query_player, '○':player(alphabeta_search)}, verbose = False).utility()\n",
+    "\n",
+    "if score > 0:\n",
+    "    print(\"선수자의 승리입니다!\")\n",
+    "elif score < 0:\n",
+    "    print(\"후수자의 승리입니다!\")\n",
+    "else:\n",
+    "    print(\"무승부 입니다!\")\n",
+    "print(\"재시작을 원한다면 Shift + Enter를 눌러주세요\")"
+   ]
   }
  ],
  "metadata": {
@@ -767,7 +742,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
