남아있는 state 제거

--- a/copy.ipynb
+++ b/copy.ipynb
@@ -51,20 +51,20 @@
         "    필요에 따라 게임의 초기 상태를 지정하려면,\n",
         "    클래스 생성자에서 초기 상태를 initial 에 세팅하면 됨.\"\"\"\n",
         "\n",
-        "    def actions(self, state):\n",
-        "        \"\"\"주어진 상태에서 허용 가능한 수(move) 리스트\"\"\"\n",
+        "    def actions(self):\n",
+        "        \"\"\"허용 가능한 수(move) 리스트\"\"\"\n",
         "        raise NotImplementedError\n",
         "\n",
-        "    def result(self, state, move):\n",
-        "        \"\"\"주어진 상태(state)에서 수(move)를 두었을 때의 결과 상태 리턴\"\"\"\n",
+        "    def result(self):\n",
+        "        \"\"\"수(move)를 두었을 때의 결과 상태 리턴\"\"\"\n",
         "        raise NotImplementedError\n",
         "\n",
-        "    def is_terminal(self, state):\n",
-        "        \"\"\"state가 종료 상태이면 True 리턴\"\"\"\n",
-        "        return not self.actions(state)\n",
+        "    def is_terminal(self):\n",
+        "        \"\"\"종료 상태이면 True 리턴\"\"\"\n",
+        "        return not self.actions()\n",
         "    \n",
-        "    def utility(self, state, player):\n",
-        "        \"\"\"종료 상태 state에서 게임이 종료됐을 때 player의 효용 함수 값\"\"\"\n",
+        "    def utility(self):\n",
+        "        \"\"\"게임이 종료됐을 때 효용 함수 값\"\"\"\n",
         "        raise NotImplementedError"
       ]
     },
@@ -79,11 +79,11 @@
         "def play_game(game, strategies: dict, verbose=False):\n",
         "    \"\"\"번갈아 가면서 두는 게임 진행 함수.\n",
         "    strategies: {참가자 이름: 함수} 형태의 딕셔너리. \n",
-        "    여기서 함수(game, state)는 상태 state에서 참가자의 수(move)를 찾는 함수\"\"\"\n",
+        "    여기서 함수(game)는 참가자의 수(move)를 찾는 함수\"\"\"\n",
         "    #state = game.initial\n",
         "    while not game.is_terminal():\n",
         "        player = game.to_move\n",
-        "        move = strategies[game.to_move](game, game.board)\n",
+        "        move = strategies[game.to_move](game)\n",
         "        if move:\n",
         "            game = game.result(move)\n",
         "        else:\n",
@@ -106,52 +106,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "GIkbL4AupNIb"
-      },
-      "source": [
-        "### 미니맥스 탐색"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 5,
-      "metadata": {
-        "id": "agq5EhPfpNIc"
-      },
-      "outputs": [],
-      "source": [
-        "def minimax_search(game, state):\n",
-        "    \"\"\"최고의 수를 결정하기 위한 게임 트리 탐색.\n",
-        "    (미니맥스 값, 수) 쌍을 리턴함.\"\"\"\n",
-        "\n",
-        "    player = state.to_move\n",
-        "\n",
-        "    def max_value(state):\n",
-        "        if game.is_terminal():\n",
-        "            return game.utility(state, player), None\n",
-        "        v, move = -infinity, None\n",
-        "        for a in game.actions(state):\n",
-        "            v2, _ = min_value(game.result(state, a))\n",
-        "            if v2 > v:\n",
-        "                v, move = v2, a\n",
-        "        return v, move\n",
-        "\n",
-        "    def min_value(state):\n",
-        "        if game.is_terminal():\n",
-        "            return game.utility(state, player), None\n",
-        "        v, move = +infinity, None\n",
-        "        for a in game.actions(state):\n",
-        "            v2, _ = max_value(game.result(state, a))\n",
-        "            if v2 < v:\n",
-        "                v, move = v2, a\n",
-        "        return v, move\n",
-        "\n",
-        "    return max_value(state)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "1t8K1wNnpNId"
       },
       "source": [
@@ -166,10 +120,8 @@
       },
       "outputs": [],
       "source": [
-        "def alphabeta_search(game1):\n",
+        "def alphabeta_search(game):\n",
         "    \"\"\"알파-베타 가지치기를 사용하여 최고의 수를 결정하기 위한 게임 트리 탐색.\"\"\"\n",
-        "\n",
-        "    player = game1.to_move\n",
         "\n",
         "    def max_value(game, alpha, beta):\n",
         "        if game.is_terminal():\n",
@@ -204,10 +156,10 @@
         "            return max_value(game, alpha, beta)   \n",
         "        return v, move\n",
         "    \n",
-        "    if(game1.to_move=='○'):\n",
-        "        return min_value(game1, -infinity, +infinity)\n",
+        "    if(game.to_move=='○'):\n",
+        "        return min_value(game, -infinity, +infinity)\n",
         "    else :\n",
-        "        return max_value(game1, -infinity, +infinity)"
+        "        return max_value(game, -infinity, +infinity)"
       ]
     },
     {
@@ -265,8 +217,6 @@
         "    player = game.to_move\n",
         "\n",
         "    def max_value(game, alpha, beta, depth):\n",
-        "        # game.display()\n",
-        "        # print(game.to_move, game.actions())\n",
         "        if game.is_terminal():\n",
         "            return game.utility(), None\n",
         "        if cutoff(game, depth):\n",
@@ -278,7 +228,6 @@
         "                v, move = v2, a\n",
         "                alpha = max(alpha, v)\n",
         "            if v >= beta:\n",
-        "                # print('가지치기')\n",
         "                return v, move\n",
         "        if not move:\n",
         "            game.to_move = '○'\n",
@@ -286,8 +235,6 @@
         "        return v, move\n",
         "\n",
         "    def min_value(game, alpha, beta, depth):\n",
-        "        # game.display()\n",
-        "        # print(game.to_move, game.actions())\n",
         "        if game.is_terminal():\n",
         "            return game.utility(), None\n",
         "        if cutoff(game, depth):\n",
@@ -303,7 +250,6 @@
         "        if not move:\n",
         "            game.to_move =  '●'\n",
         "            return max_value(game, alpha, beta, depth)   \n",
-        "        # print(game.actions(), move)\n",
         "        return v, move\n",
         "\n",
         "\n",
@@ -482,7 +428,7 @@
       },
       "outputs": [],
       "source": [
-        "def random_player(game, state):\n",
+        "def random_player(game):\n",
         "    \"\"\"허용되는 수(move) 중에서 무작위로 하나를 선택하는 플레이어\"\"\"\n",
         "    act = game.actions()\n",
         "    if not act:\n",
@@ -502,7 +448,7 @@
       },
       "outputs": [],
       "source": [
-        "def query_player(game, state):\n",
+        "def query_player(game):\n",
         "    \"\"\"다음 수(move)를 직접 입력하는 형태의 플레이어\"\"\"\n",
         "    print(\"현재 상태:\")\n",
         "    game.display()\n",
@@ -523,10 +469,10 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
       "metadata": {
         "id": "nCdJ04Ca-7Q1"
-      }
+      },
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -539,12 +485,12 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "BHW6PwMc-D1b"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
@@ -559,8 +505,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Player ● move: [0, 2]\n",
             " .  . ●  . \n",
@@ -630,14 +576,14 @@
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "<__main__.Othello at 0x7f4a4d625220>"
             ]
           },
+          "execution_count": 71,
           "metadata": {},
-          "execution_count": 71
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -646,27 +592,27 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "N-HkYXmyFWcp"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
       "execution_count": 38,
       "metadata": {
-        "id": "ijfeQBtHpNIj",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "ijfeQBtHpNIj",
         "outputId": "0af337ad-aec3-42b8-cdc7-3882ed2d01a2"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "['.', '.', '.', '.', '.']\n",
             "['.', '●', '○', '.', '.']\n",
@@ -823,7 +769,6 @@
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "[['●', '●', '●', '○', '●'],\n",
@@ -833,8 +778,9 @@
               " ['●', '●', '●', '●', '●']]"
             ]
           },
+          "execution_count": 38,
           "metadata": {},
-          "execution_count": 38
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -845,16 +791,16 @@
       "cell_type": "code",
       "execution_count": 69,
       "metadata": {
-        "id": "4TEzqUSPpNIj",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "4TEzqUSPpNIj",
         "outputId": "f20f66fe-fbc0-4b5d-8a3e-d103b6992fe3"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "-35\n",
             "-25\n",
@@ -926,8 +872,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "['.', '.', '.', '.']\n",
             "['.', '●', '○', '.']\n",
@@ -949,9 +895,9 @@
           ]
         },
         {
-          "output_type": "error",
           "ename": "KeyboardInterrupt",
           "evalue": "ignored",
+          "output_type": "error",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
